YSTORM-5691: Updating Troubleshooting Page (#199)
* YSTORM-5691: Updating Troubleshooting Page

* Update index.rst

* Update index.rst